--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 black = "^25.1.0"
-python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 langchain = "^0.3.18"
 langchain-community = "^0.3.17"
 langchain-ollama = "^0.2.3"
+langchain-groq = "^0.2.4"
 colorful-print = "^0.1.0"
 unidiff = "^0.7.5"
+fastapi = "^0.115.8"
+uvicorn = { extras = ["standard"], version = "^0.34.0" }
 
 [tool.black]
 line-length = 120
